chore: implemented rest APIs for layers
